# entrydsm-platform

./: .bazelrc  .commitlintrc.cjs  .gitignore  BUILD.bazel  CONTRIBUTING.md  Dockerfile  MODULE.bazel  go.MODULE.bazel  go.bzl  go.work  kotlin.MODULE.bazel  kotlin.bzl  maven.bzl
.github/ISSUE_TEMPLATE/: bug.yaml  documentation.yaml  postmortem.yaml  question.yaml
.github/ISSUE_TEMPLATES/: chore.yaml  documentation.yaml  feature.yaml  incident.yaml
.github/PULL_REQUEST_TEMPLATE/: bug.md  chore.md  documentation.md  enhancement.md  incident.md
.github/workflows/: commitlint.yaml
.gitub/ISSUE_TEMPLATES/: enhancement.yaml  question.yaml
.gitub/PULL_REQUEST_TEMPLATE/: feature.md
.gitub/workflows/: commitlint.yaml
documents/: DEPENDENCY.md
documents/templates/: entrydsm-adr-xxx.template.md  entrydsm-aod-xxx.template.md  entrydsm-dmd-xxx.template.md
systems/admission/module-a/: BUILD.bazel
systems/analytics/: BUILD.bazel  go.mod
systems/analytics/cmd/server/: BUILD.bazel  main.go  main_test.go
systems/application/: BUILD.bazel
systems/configuration/module-a/: BUILD.bazel
systems/document/document-application/src/main/kotlin/hs/kr/entrydsm/: ExampleApplication.kt
systems/evaluation/: .bazelrc  go.mod
systems/gateway/: MODULE.bazel
systems/identity/identity-adapter-out/src/test/kotlin/hs/kr/entrydsm/: TestMain.kt
systems/identity/module-a/: BUILD.bazel
systems/notification/: kotlin.bzl
systems/observability/: BUILD.bazel  MODULE.bazel  go.mod
systems/schedule/: .gitignore
systems/schedule/module-b/: deps.bzl
