load("@gazelle//:def.bzl", "gazelle")
load("//:kotlin.bzl", "setup_kotlin_compiler", "setup_spring_allopen_plugin")

package(default_visibility = ["//visibility:public"])

setup_kotlin_compiler()
setup_spring_allopen_plugin()

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = ["-from_file=go.mod", "-to_macro=deps.bzl%go_dependencies", "-prune"],
    command = "update-repos",
)
