module(
    name = "entrydsm_platform",
    version = "0.0.0",
)

bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

include("//:kotlin.MODULE.bazel")
include("//:go.MODULE.bazel")
