load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/entrydsm/example/go/gin/cmd/server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["main_test.go"],
    embed = [":server_lib"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
